jenkins/jenkins-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: jenkins
  name: jenkins
  labels:
    app: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: jenkinsci/blueocean
        name: jemkins
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            name: web
            protocol: TCP
          - containerPort: 50000
            name: agent
            protocol: TCP
        ports:
          - containerPort: 8080
            name: jenkins
          - containerPort: 50000
            name: jenkins-5
        volumeMounts:
          - name: jenkinshome
            mountPath: /var/jenkins_home
          - name: docker-socket
            mountPath: /var/run/docker.sock
      volumes:
        - name: jenkinshome
          persistentVolumeClaim:
             claimName: jenkins       
        - name: docker-socket
          hostPath:
           path: /var/run/docker.sock
